--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -283,7 +283,7 @@ jobs:
           # GitHub Container Registry 로그인
           echo ${{ secrets.GITHUB_TOKEN }} | sudo docker login ghcr.io -u ${{ github.actor }} --password-stdin
           
-          # 현재 실행 중인 컨테이너 확인 (개선된 로직)
+          # 현재 실행 중인 컨테이너 확인
           BLUE_RUNNING=$(sudo docker ps -q -f name=app-blue -f status=running)
           GREEN_RUNNING=$(sudo docker ps -q -f name=app-green -f status=running)
           
@@ -291,21 +291,18 @@ jobs:
           echo "Blue container running: ${BLUE_RUNNING:-"None"}"
           echo "Green container running: ${GREEN_RUNNING:-"None"}"
           
-          # 활성/비활성 컨테이너 결정 (개선된 로직)
+          # 활성/비활성 컨테이너 결정
           if [ -n "$BLUE_RUNNING" ] && [ -z "$GREEN_RUNNING" ]; then
-            # Blue만 실행 중 -> Green으로 배포
             ACTIVE_COLOR="blue"
             INACTIVE_COLOR="green"
             ACTIVE_PORT="8080"
             INACTIVE_PORT="8081"
           elif [ -n "$GREEN_RUNNING" ] && [ -z "$BLUE_RUNNING" ]; then
-            # Green만 실행 중 -> Blue로 배포
             ACTIVE_COLOR="green"
             INACTIVE_COLOR="blue"
             ACTIVE_PORT="8081"
             INACTIVE_PORT="8080"
           elif [ -n "$BLUE_RUNNING" ] && [ -n "$GREEN_RUNNING" ]; then
-            # 둘 다 실행 중 -> 더 최근 것을 활성으로 간주하고 전환
             BLUE_CREATED=$(sudo docker inspect app-blue --format='{{.Created}}' 2>/dev/null || echo "")
             GREEN_CREATED=$(sudo docker inspect app-green --format='{{.Created}}' 2>/dev/null || echo "")
             
@@ -321,7 +318,6 @@ jobs:
               INACTIVE_PORT="8081"
             fi
           else
-            # 둘 다 없음 -> Blue로 첫 배포
             echo "🆕 No containers running, starting first deployment"
             ACTIVE_COLOR="none"
             INACTIVE_COLOR="blue"
@@ -335,18 +331,25 @@ jobs:
           # 새 이미지 pull
           sudo docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           
-          # 비활성 컨테이너 중지 및 제거 (존재할 경우)
+          # 비활성 컨테이너 정리
           if sudo docker ps -a -q -f name=app-$INACTIVE_COLOR | grep -q .; then
             echo "🛑 Stopping existing app-$INACTIVE_COLOR container"
             sudo docker stop app-$INACTIVE_COLOR || true
             sudo docker rm app-$INACTIVE_COLOR || true
           fi
           
+          # 메모리 확보를 위해 활성 컨테이너 먼저 정지
+          if [ "$ACTIVE_COLOR" != "none" ]; then
+            echo "💾 Stopping $ACTIVE_COLOR container first to free memory"
+            sudo docker stop app-$ACTIVE_COLOR || true
+            sleep 10  # 메모리 정리 대기
+          fi
+          
           # 새 컨테이너 시작
           echo "🟢 Starting new app-$INACTIVE_COLOR container on port $INACTIVE_PORT"
-          sudo docker run -d \
+          CONTAINER_ID=$(sudo docker run -d \
             --name app-$INACTIVE_COLOR \
-            --network ubuntu_app-network  \
+            --network ubuntu_app-network \
             -p $INACTIVE_PORT:8080 \
             -e SPRING_PROFILES_ACTIVE=dev \
             -e SERVER_COLOR=$INACTIVE_COLOR \
@@ -365,91 +368,89 @@ jobs:
             -e TOUR_API_URL="${{ env.TOUR_API_URL }}" \
             -e TOUR_API_SERVICE_KEY="${{ env.TOUR_API_SERVICE_KEY}}" \
             --restart unless-stopped \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest)
           
-          # 헬스체크 대기
+          echo "📦 Container ID: $CONTAINER_ID"
+          
+          # 개선된 헬스체크
           echo "⏳ Waiting for health check on port $INACTIVE_PORT..."
-          for i in {1..30}; do
-            if curl -f http://localhost:$INACTIVE_PORT/actuator/health > /dev/null 2>&1; then
+          echo "📋 Initial container logs:"
+          sudo docker logs app-$INACTIVE_COLOR --tail 10
+          
+          for i in {1..60}; do  # 5분으로 연장
+            # 컨테이너 상태 먼저 확인
+            CONTAINER_STATUS=$(sudo docker inspect app-$INACTIVE_COLOR --format='{{.State.Status}}' 2>/dev/null || echo "not_found")
+            
+            if [ "$CONTAINER_STATUS" != "running" ]; then
+              echo "❌ Container stopped unexpectedly! Status: $CONTAINER_STATUS"
+              echo "📋 Container logs:"
+              sudo docker logs app-$INACTIVE_COLOR --tail 50
+              exit 1
+            fi
+            
+            # 다양한 헬스체크 시도
+            HEALTH_CHECK_PASSED=false
+            
+            # 1. Actuator health endpoint
+            if curl -f -s http://localhost:$INACTIVE_PORT/actuator/health > /dev/null 2>&1; then
+              HEALTH_CHECK_PASSED=true
+            # 2. 기본 root endpoint
+            elif curl -f -s http://localhost:$INACTIVE_PORT/ > /dev/null 2>&1; then
+              HEALTH_CHECK_PASSED=true
+            # 3. 컨테이너 내부에서 직접 확인
+            elif sudo docker exec app-$INACTIVE_COLOR curl -f -s http://localhost:8080/actuator/health > /dev/null 2>&1; then
+              HEALTH_CHECK_PASSED=true
+            fi
+            
+            if [ "$HEALTH_CHECK_PASSED" = true ]; then
               echo "✅ Health check passed!"
               break
             fi
-            if [ $i -eq 30 ]; then
-              echo "❌ Health check failed!"
-              # 실패 시 새 컨테이너 제거
+            
+            if [ $i -eq 60 ]; then
+              echo "❌ Health check failed after 5 minutes!"
+              echo ""
+              echo "🔍 Debugging information:"
+              echo "📋 Recent container logs:"
+              sudo docker logs app-$INACTIVE_COLOR --tail 100
+              echo ""
+              echo "🌐 Network test:"
+              sudo docker exec app-$INACTIVE_COLOR netstat -tlnp | grep :8080 || echo "Port 8080 not listening"
+              echo ""
+              echo "💾 Memory usage:"
+              free -h
+              
+              # 실패 시 컨테이너 제거
               sudo docker stop app-$INACTIVE_COLOR || true
               sudo docker rm app-$INACTIVE_COLOR || true
               exit 1
             fi
-            echo "Attempt $i/30 - waiting..."
+            
+            # 진행률 표시 (매 10회마다)
+            if [ $((i % 10)) -eq 0 ]; then
+              echo "⏳ Attempt $i/60 - still waiting... ($(($i * 5)) seconds elapsed)"
+              echo "📝 Recent logs:"
+              sudo docker logs app-$INACTIVE_COLOR --tail 5
+            fi
+            
             sleep 5
           done
           
-          # Nginx 설정 업데이트 (IP 주소 사용) - 디버깅 강화
+          # Nginx 설정 업데이트 (기존 코드와 동일)
           echo "🔄 Updating Nginx configuration..."
-          
-          # EC2 내부 IP 주소 사용
           HOST_IP=$(hostname -I | awk '{print $1}')
           echo "🌐 Host IP: $HOST_IP"
           
-          # 현재 설정 확인
-          echo "📋 Current nginx config:"
-          sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf | grep -A2 -B2 "server.*:" || echo "No server lines found"
-          
-          # host.docker.internal을 IP로 변경하고 포트 업데이트
-          echo "🔧 Updating host.docker.internal to IP..."
           sudo docker exec nginx-proxy sed -i "s/host\.docker\.internal/$HOST_IP/g" /etc/nginx/conf.d/default.conf || echo "No host.docker.internal found"
-          
-          echo "🔧 Updating port to $INACTIVE_PORT..."
           sudo docker exec nginx-proxy sed -i "s/$HOST_IP:[0-9]*/$HOST_IP:$INACTIVE_PORT/g" /etc/nginx/conf.d/default.conf || echo "Port update failed"
           
-          # 변경 후 설정 확인
-          echo "📋 Updated nginx config:"
-          sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf | grep -A2 -B2 "server.*:" || echo "No server lines found after update"
-          
-          # Nginx 테스트 및 재로드
-          echo "🧪 Testing nginx configuration..."
           if sudo docker exec nginx-proxy nginx -t; then
-            echo "✅ Nginx config test passed"
-            if sudo docker exec nginx-proxy nginx -s reload; then
-              echo "✅ Nginx reloaded successfully: $HOST_IP:$INACTIVE_PORT"
-            else
-              echo "⚠️ Nginx reload failed, trying restart..."
-              sudo docker restart nginx-proxy
-              sleep 5
-              echo "🔄 Nginx restarted"
-            fi
+            sudo docker exec nginx-proxy nginx -s reload
+            echo "✅ Nginx reloaded successfully: $HOST_IP:$INACTIVE_PORT"
           else
-            echo "❌ Nginx config test failed, showing config:"
-            sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf
-            echo "🔄 Restarting nginx anyway..."
+            echo "⚠️ Nginx config test failed, restarting..."
             sudo docker restart nginx-proxy
             sleep 5
-          fi
-          
-          # 최종 확인
-          echo "🔍 Final nginx status:"
-          sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf | grep "server.*$HOST_IP" || echo "❌ No matching server line found"
-          
-          # 프리티어 메모리 절약: 이전 컨테이너 정지 (삭제 안함)
-          if [ "$ACTIVE_COLOR" != "none" ]; then
-            echo "🔄 Traffic switched from $ACTIVE_COLOR to $INACTIVE_COLOR"
-            echo "💾 Stopping $ACTIVE_COLOR container to save memory (Free Tier)"
-            
-            # 메모리 절약을 위해 이전 컨테이너 정지 (삭제 안함)
-            sudo docker stop app-$ACTIVE_COLOR
-            
-            echo "✅ $ACTIVE_COLOR container stopped (memory freed)"
-            echo ""
-            echo "🔄 Fast rollback command (if needed):"
-            echo "sudo docker start app-$ACTIVE_COLOR"
-            echo "sudo docker exec nginx-proxy sed -i 's/:$INACTIVE_PORT/:$ACTIVE_PORT/g' /etc/nginx/conf.d/default.conf"
-            echo "sudo docker exec nginx-proxy nginx -s reload"
-            echo ""
-            echo "🧹 Complete cleanup (when stable):"
-            echo "sudo docker rm app-$ACTIVE_COLOR"
-          else
-            echo "🎉 First deployment completed successfully!"
           fi
           
           # 최종 상태 확인
